[tool.poetry]
name = "yampb"
version = "0.1.0"
description = "A random bot for fun"
authors = ["xtyl <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
"discord.py" = "^1.7.3"
discord = "^1.7.3"
python-dotenv = "^0.20.0"
requests = "^2.28.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"